Basic MVP Implementations committed
MVP includes Overview Inventory Management page, settings function,
add item, add contact, add itemgroup function, search function
during add item, and moredata class when table is clicked
in the overview section.
Still need implementation of withdrawing item from
inventory, Tracking log files, and CSS

--- a/tory-api/package.json
+++ b/tory-api/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "knex": "^0.13.0",
+    "mongodb": "^2.2.31",
+    "pg": "^7.0.2",
     "restify": "^5.0.1"
   }
 }
